# Website_Builder

./: README.md  angular.json  deploy-k8s.sh  docker-compose.yaml  package-lock.json  package.json
backend/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml  requirements.txt
kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  namespace.yaml  secrets.yaml
src/app/: app.spec.ts  app.ts
